全面升级 优化代码编写逻辑实现,使用代码更简洁可读